--- a/CustomAgent/CustomAgent.csproj
+++ b/CustomAgent/CustomAgent.csproj
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Compile Include="Collections\PriorityQueue.cs" />
     <Compile Include="CustomAgent.cs" />
+    <Compile Include="Extensions\ArrayExtension.cs" />
     <Compile Include="Extensions\ListExtension.cs" />
     <Compile Include="Graph\Graph.cs" />
     <Compile Include="Graph\QuoridorGraph.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchAlgorithm\AlphaBetaPruning.cs" />
     <Compile Include="SearchAlgorithm\Dijkstra.cs" />
+    <Compile Include="SearchAlgorithm\JumpPointSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
